random_field/jitfailure-dolfin_expression_df3aca3debafd2b1c4f43e077a5de9a1/error.log
/var/folders/br/kqx4wrcd4yn6zmk5jlrz9r7c0000gn/T/tmppvcn1nvf/dolfin_expression_df3aca3debafd2b1c4f43e077a5de9a1.cpp:61:23: error: use of undeclared identifier 'y'
          values[0] = y[1] /pow(1,alpha)*sin(1*pi*x[0])y[2] /pow(2,alpha)*sin(2*pi*x[0])y[3] /pow(3,alpha)*sin(3*pi*x[0])y[4] /pow(4,alpha)*sin(4*pi*x[0])y[5] /pow(5,alpha)*sin(5*pi*x[0])y[6] /pow(6,alpha)*sin(6*pi*x[0])y[7] /pow(7,alpha)*sin(7*pi*x[0])y[8] /pow(8,alpha)*sin(8*pi*x[0])y[9] /pow(9,alpha)*sin(9*pi*x[0])y[10] /pow(10,alpha)*sin(10*pi*x[0])y[11] /pow(11,alpha)*sin(11*pi*x[0]);
                      ^
/var/folders/br/kqx4wrcd4yn6zmk5jlrz9r7c0000gn/T/tmppvcn1nvf/dolfin_expression_df3aca3debafd2b1c4f43e077a5de9a1.cpp:61:35: error: use of undeclared identifier 'alpha'; did you mean 'std::ctype_base::alpha'?
          values[0] = y[1] /pow(1,alpha)*sin(1*pi*x[0])y[2] /pow(2,alpha)*sin(2*pi*x[0])y[3] /pow(3,alpha)*sin(3*pi*x[0])y[4] /pow(4,alpha)*sin(4*pi*x[0])y[5] /pow(5,alpha)*sin(5*pi*x[0])y[6] /pow(6,alpha)*sin(6*pi*x[0])y[7] /pow(7,alpha)*sin(7*pi*x[0])y[8] /pow(8,alpha)*sin(8*pi*x[0])y[9] /pow(9,alpha)*sin(9*pi*x[0])y[10] /pow(10,alpha)*sin(10*pi*x[0])y[11] /pow(11,alpha)*sin(11*pi*x[0]);
                                  ^~~~~
                                  std::ctype_base::alpha
/Users/naoki/miniconda3/envs/fenicsproject/bin/../include/c++/v1/__locale:471:23: note: 'std::ctype_base::alpha' declared here
    static const mask alpha  = _CTYPE_A;
                      ^
2 errors generated.
